# gst-realsenseRGBD-streaming

./: CMakeLists.txt  README.md  RGBD_rtsp_streaming.cpp  RGBDstreaming.cpp  RGB_rtsp_streaming.cpp  UDPlistener.cpp  UDPserver.cpp  settings.yaml  udpSocketSimple.cpp  udpSocketSimple.h  udpSocketTest.cpp
